// Produced by Acceleo JavaScript Generator 1.1.0
import "../ccsds_mal/types.proto";
import "../ccsds_cs/Provider.proto";
import "../ccsds_cs/User.proto";
import "../ccsds_mal/NamedValue.proto";


package logbookEvent.protobuf;

message LogbookEvent {
extensions 8 to 108;

  optional ccsds_mal.protobuf.TIME eventDate = 1;
  optional ccsds_mal.protobuf.TIME systemDate = 2;
  optional ccsds_mal.protobuf.STRING mission = 3;
  optional ccsds_mal.protobuf.ULONG satellite = 4;
  optional ccsds_mal.protobuf.BLOB producer = 5;
  optional ccsds_mal.protobuf.BLOB user = 6;
  repeated ccsds_mal.protobuf.NamedValue specificAttributes = 7;
}
